objects/SKVObject1__c.object
<CustomObject>
    <fields>
        <fullName>SKVField1__c</fullName>
        <label>SKVField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SKVField2__c</fullName>
        <label>SKVField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SKVField3__c</fullName>
        <label>SKVField3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>SKVObject1</label>
    <nameField>
        <label>SKVObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKVObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>